test/spec_vectors/memory64/fail/module_11.wat
(module (data (i64.const 0) "x"))